[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
eclipse.project.name = appName + '-core'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

tasks.withType(JavaExec) {
  jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
}

dependencies {
  api "com.badlogicgames.gdx:gdx:$gdxVersion"
  api "com.github.MrStahlfelge.gdx-websockets:core:$websocketVersion"
  implementation 'com.google.code.gson:gson:2.10.1'
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

// OR (alternative for older Gradle versions)
compileJava {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
  options.encoding = 'UTF-8'
}
